Converting play client to Spring Boot